Update default admin user to Alex Kantor with new email and password

--- a/index.html
+++ b/index.html
@@ -704,8 +704,8 @@
     <script>
         // In-memory user database (replace with a proper database later)
         let users = [
-            { email: "admin@example.com", password: hashPassword("admin123"), name: "Admin User", role: "Admin", firstLogin: false }
-        ];
+    { email: "alex@masonworxnj.com", password: hashPassword("Sendy0841!"), name: "Alex Kantor", role: "Admin", firstLogin: false }
+];
 
         // In-memory messages and tasks
         let messages = [];
